add new dependencies in the main file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
     "emitDecoratorMetadata": true,
     "moduleResolution": "Node",
     "esModuleInterop": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
   }
 }
